# emptics

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  README.md
emptics/: __init__.py  all_imports.py  blas_dependency.cpp  blas_dependency.hpp  cblas_dependency.cpp  cblas_dependency.hpp  cemptics.pybind.cpp  check_h5py_with_mpi.py  check_mpi4py.py  emptics.cpp  emptics.py  emptics.pybind.cpp  hdf5_parallel.test.cpp  hello.cpp  hello.hpp  import_core.py  import_dev.py  import_extra.py  import_optional.py  mpi4py.cpp  mpi4py.hpp
emptics/apps/: gpu.cu  hdf5_parallel.cpp  parmetis.cpp  ptscotch.cpp
test/: CMakeLists.txt  test_emptics.py
